--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -54,8 +54,7 @@
     "1. Exercise 1: Copying data between AWS regions\n",
     "2. Exercise 2: Copying data with Skyplane \n",
     "3. Exercise 3: Copying data to multiple destinations (multicast) \n",
-    "4. Exercise 4: Copying data between two VMs \n",
-    "5. Exercise 5: Cleanup \n",
+    "5. Exercise 4: Cleanup \n",
     "\n",
     "# Learning outcomes 🎯\n",
     "\n",
@@ -63,7 +62,7 @@
     "\n",
     "1. An understand the Skyplane API\n",
     "2. Transfered data for a ML model from AWS S3 object stores in US-EAST-1 (N. Virginia) to EU-WEST-1 (Ireland)\n",
-    "3. Compare and contrast `aws s3 cp` with `skyplane cp`\n",
+    "3. Compare and contrast `aws s3 cp` with Skyplane\n",
     "4. Terminate the transfer and clean up state\n",
     "\n"
    ]
@@ -79,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These notebooks serve as a guide to Skyplane. At any point if you happen to get stuck, feel free to ping us on `#skyplane` channel on the [Skycamp slack.](https://join.slack.com/t/skycamp2022/shared_invite/zt-1gsrgky1z-iSFVEEOMSUD7Dd7B5syCsA)\n",
+    "These notebooks serve as a guide to Skyplane. At any point if you happen to get stuck, feel free to ping us on `#skyplane` channel on the [Skycamp slack.](https://join.slack.com/t/skycamp2023/shared_invite/zt-25axzytwn-y5AR~Bx2nqm4Iec6jlq3JA)\n",
     "\n",
     "We will describe what we are doing in this notebook. The commands and the example response are included. We highly recommend you open an terminal and run commands yourself. \n",
     "\n",
@@ -156,49 +155,6 @@
    "outputs": [],
    "source": [
     "!pip install ipywidgets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Configure Skyplane with AWS credentials. \n",
-    "\n",
-    "#### <span style=\"color:red\">Choose `Y` only for AWS, and `n` for GCP and Azure.</span>\n",
-    "\n",
-    "💻 `skyplane init`\n",
-    "\n",
-    "```\n",
-    " _____ _   ____   _______ _       ___   _   _  _____ \n",
-    "/  ___| | / /\\ \\ / / ___ \\ |     / _ \\ | \\ | ||  ___|\n",
-    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__  \n",
-    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __| \n",
-    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___ \n",
-    "\\____/\\_| \\_/  \\_/ \\_|   \\_____/\\_| |_/\\_| \\_/\\____/\n",
-    "\n",
-    "03:37:54 [DEBUG] Found existing configuration file at /root/.skyplane/config, \n",
-    "loading\n",
-    "\n",
-    "(1) Configuring AWS:\n",
-    "    Do you want to configure AWS support in Skyplane? [Y/n]:\n",
-    "    Loaded AWS credentials from the AWS CLI [IAM access key ID: ...ZEXYJW]\n",
-    "    AWS region config file saved to /root/.skyplane/aws_config\n",
-    "\n",
-    "(2) Configuring Azure:\n",
-    "    Do you want to configure Azure support in Skyplane? [Y/n]: n\n",
-    "    Disabling Azure support\n",
-    "\n",
-    "(3) Configuring GCP:\n",
-    "    Do you want to configure GCP support in Skyplane? [Y/n]: n\n",
-    "    Disabling Google Cloud support\n",
-    "\n",
-    "Config file saved to /root/.skyplane/config\n",
-    "To disable performance logging info: \n",
-    "https://skyplane.org/en/latest/performance_stats_collection.html\n",
-    "```\n",
-    "\n",
-    "\n",
-    "> **💡 Hint** - If you run into any issues, please contact one of the Skyplane team members immediately. This step is critical to follow through the tutorial."
    ]
   },
   {
@@ -311,7 +267,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each cloud provider has dedicated tools to move data between cloud regions. Let’s try transferring over the data using AWS’s built in cp command:\n",
+    "Each cloud provider has dedicated tools to move data between cloud regions. Make sure you are authenticated with AWS by running: \n",
+    "\n",
+    "💻 `aws configure` \n",
+    "\n",
+    "Let’s try transferring over the data using AWS’s built in cp command:\n",
     "\n",
     "💻 `aws s3 cp --recursive s3://skycamp-demo-bucket/gorilla s3://{bucket_name}`\n",
     "\n",
@@ -344,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.copy(src_bucket_path, bucket_path, recursive=True, max_instances=4)"
+    "client.copy(src_bucket_path, bucket_path, recursive=True, max_instances=2)"
    ]
   },
   {
@@ -415,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.copy(src_bucket_path, [bucket_path, another_bucket_path], recursive=True, max_instances=4)"
+    "client.copy(src_bucket_path, [bucket_path, another_bucket_path], recursive=True, max_instances=2)"
    ]
   },
   {
@@ -448,22 +408,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 💻 Terminate your cluster!"
+    "Run to double check that instances are all deprovisioned: "
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Finally, just to make sure that we don't have any instances running that might be burning up money, let's quickly deprovision everything.\n",
-    "\n",
-    "💻 `skyplane deprovision`\n",
-    "\n",
-    "```\n",
-    "No instances to deprovision\n",
-    "✓ Removing IPs from VPCs (4/4) in 2.05s\n",
-    "\n",
-    "```"
+    "!skyplane deprovision"
    ]
   },
   {
