--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "This notebook consists of 4 exercises:\n",
     "\n",
-    "1. Exercise 1: Copying data between AWS regions\n",
+    "1. Exercise 1: Setting up authentication and cloud buckets\n",
     "2. Exercise 2: Copying data with Skyplane \n",
     "3. Exercise 3: Copying data to multiple destinations (multicast) \n",
     "5. Exercise 4: Cleanup \n",
@@ -78,48 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These notebooks serve as a guide to Skyplane. At any point if you happen to get stuck, feel free to ping us on `#skyplane` channel on the [Skycamp slack.](https://join.slack.com/t/skycamp2023/shared_invite/zt-25axzytwn-y5AR~Bx2nqm4Iec6jlq3JA)\n",
-    "\n",
-    "We will describe what we are doing in this notebook. The commands and the example response are included. We highly recommend you open an terminal and run commands yourself. \n",
-    "\n",
-    "### 💻 - Run commands in an interactive terminal window\n",
-    "\n",
-    "You can use this icon as a hint to know when to switch away from the current notebook and edit a file or open a terminal. We also have example outputs that you can use to ensure consistency. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# How to open a Terminal\n",
-    "\n",
-    "If you're using jupyter lab, you can create a terminal in your browser by going to `File -> New -> Terminal`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Preflight  - Initializing cloud credentials"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Before we start this tutorial, we have few pre-flight checks:\n",
-    "\n",
-    "### Let's ensure we have the latest notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Please run this cell\n",
-    "!git pull --quiet"
+    "These notebooks serve as a guide to Skyplane. At any point if you happen to get stuck, feel free to ping us on `#skyplane` channel on the [Skycamp slack.](https://join.slack.com/t/skycamp2023/shared_invite/zt-25axzytwn-y5AR~Bx2nqm4Iec6jlq3JA)\n"
    ]
   },
   {
@@ -161,6 +120,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Transferring Data with Skyplane\n",
+    "\n",
+    "<p style=\"text-align:center;\">\n",
+    "    <img src=\"./assets/unicast.jpg\" width=700>\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The core of Skyplane is based around the `cp` command. Suppose you want to transfer a fine-tuned [Gorilla](https://github.com/ShishirPatil/gorilla) model from one region to another to be accessible to a cross-regional serving cluster. Skyplane can help you efficiently transfer this data so you model weights are accessible accross multiple regions.  Let’s prepare for a transfer by first initializing buckets in a few different cloud regions in AWS."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 1: Setting up Authentication & Buckets "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Authentication"
    ]
   },
@@ -185,24 +169,6 @@
     "client = skyplane.SkyplaneClient(\n",
     "    aws_config=skyplane.AWSConfig(aws_access_key=AWS_ACCESS_KEY, aws_secret_key=AWS_SECRET_KEY)\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Transferring Data with Skyplane\n",
-    "\n",
-    "<p style=\"text-align:center;\">\n",
-    "    <img src=\"./assets/unicast.jpg\" width=700>\n",
-    "</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The core of Skyplane is based around the `cp` command. Suppose you want to transfer a fine-tuned [Gorilla](https://github.com/ShishirPatil/gorilla) model from one region to another to be accessible to a cross-regional serving cluster. Skyplane can help you efficiently transfer this data so you model weights are accessible accross multiple regions.  Let’s prepare for a transfer by first initializing buckets in a few different cloud regions in AWS."
    ]
   },
   {
@@ -253,40 +219,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 1: Copying data between AWS regions"
+    "# Exercise 2: Transferring data with Skyplane"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transferring data between AWS regions with `aws s3 cp`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Each cloud provider has dedicated tools to move data between cloud regions. Make sure you are authenticated with AWS by running: \n",
-    "\n",
-    "💻 `aws configure` \n",
-    "\n",
-    "Let’s try transferring over the data using AWS’s built in cp command:\n",
-    "\n",
-    "💻 `aws s3 cp --recursive s3://skycamp-demo-bucket/gorilla s3://{bucket_name}`\n",
-    "\n",
-    "```\n",
-    "Completed 536.0 MiB/12.4 GiB (17.8 MiB/s) with 2 file(s) remaining\n",
-    "```\n",
-    "\n",
-    "### This will take a long time to complete. Feel free to interrupt the command. Notice that it copies data at under 25 MiB/s.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise 2: Let's try the same transfer with Skyplane"
+    "We've setup the following source bucket that contains model weights: "
    ]
   },
   {
@@ -299,19 +239,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can copy this to the bucket we previously created with the Skyplane client: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "client.copy(src_bucket_path, bucket_path, recursive=True, max_instances=2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##  💡  Observe skyplane significantly reduces the time to move data"
    ]
   },
   {
