--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "another_bucket_path = client.object_store().create_bucket(region=\"aws:eu-north-1\", bucket_name=another_bucket_name)\n",
+    "another_bucket_path = client.object_store().create_bucket(region=\"aws:eu-central-1\", bucket_name=another_bucket_name)\n",
     "another_bucket_path"
    ]
   },
