--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -189,7 +189,7 @@
     "# Transferring Data with Skyplane\n",
     "\n",
     "<p style=\"text-align:center;\">\n",
-    "    <img src=\"./assets/skycamp-art.png\" width=700>\n",
+    "    <img src=\"./assets/unicast.jpg\" width=700>\n",
     "</p>"
    ]
   },
@@ -407,6 +407,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "<p style=\"text-align:center;\">\n",
+    "    <img src=\"./assets/multicast.jpg\" width=700>\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -472,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
