--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -35,7 +35,7 @@
     "Skyplane is:\n",
     "1. 🔥 Blazing fast ([110x faster than AWS DataSync](https://skyplane.org/en/latest/benchmark.html))\n",
     "2. 🤑 Cheap (4x cheaper than rsync)\n",
-    "3. 🌐 Universal (AWS, Azure, GCP, IBMCloud, and Cloudflare R2)\n",
+    "3. 🌐 Universal (AWS, Azure and GCP)\n",
     "\n",
     "You can use Skyplane to transfer data: \n",
     "* between object stores within a cloud provider (e.g. AWS us-east-1 to AWS us-west-2)\n",
@@ -52,16 +52,15 @@
     "This notebook consists of 4 exercises:\n",
     "\n",
     "1. Exercise 1: Copying data between AWS regions\n",
-    "2. Exercise 2: Copying data with Skyplane \n",
-    "3. Exercise 3: Copying data to multiple destinations (multicast) \n",
-    "4. Exercise 4: Copying data between two VMs \n",
-    "5. Exercise 5: Cleanup \n",
+    "2. Exercise 2: Let's try the same transfer with Skyplane\n",
+    "3. Exercise 3: Copying data to multiple destinations (multicast) \n",",
+    "4. Exercise 4: Cleanup",
     "\n",
     "# Learning outcomes 🎯\n",
     "\n",
     "After completing this notebook, you would have:\n",
     "\n",
-    "1. An understand the Skyplane API\n",
+    "1. An understand of the Skyplane interface\n",
     "2. Transfered data for a ML model from AWS S3 object stores in US-EAST-1 (N. Virginia) to EU-WEST-1 (Ireland)\n",
     "3. Compare and contrast `aws s3 cp` with `skyplane cp`\n",
     "4. Terminate the transfer and clean up state\n",
@@ -136,26 +135,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip uninstall -y skyplane"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Please run this cell\n",
-    "!pip install -U \"git+https://github.com/skyplane-project/skyplane.git@skycamp-tutorial-2023#egg=skyplane[aws]\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install ipywidgets"
+    "!pip install -U \"git+https://github.com/skyplane-project/skyplane.git@skycamp-tutorial#egg=skyplane[aws]\""
    ]
   },
   {
@@ -205,36 +186,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Authentication"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AWS_ACCESS_KEY = \"\" #TODO \n",
-    "AWS_SECRET_KEY = \"\" #TODO "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import skyplane \n",
-    "\n",
-    "client = skyplane.SkyplaneClient(\n",
-    "    aws_config=skyplane.AWSConfig(aws_access_key=AWS_ACCESS_KEY, aws_secret_key=AWS_SECRET_KEY)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Transferring Data with Skyplane\n",
     "\n",
     "<p style=\"text-align:center;\">\n",
@@ -246,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The core of Skyplane is based around the `cp` command. Suppose you want to transfer a fine-tuned [Gorilla](https://github.com/ShishirPatil/gorilla) model from one region to another to be accessible to a cross-regional serving cluster. Skyplane can help you efficiently transfer this data so you model weights are accessible accross multiple regions.  Let’s prepare for a transfer by first initializing buckets in a few different cloud regions in AWS."
+    "The core of Skyplane is based around the `cp` command. Suppose you want to train the Stable Diffusion neural network. You’ve just gotten a fresh batch of [LAION](https://laion.ai/blog/laion-400-open-dataset/) dataset, but it is in us-east-1, while your network is in eu-west-1. Skyplane can help you efficiently transfer this data over to wherever your neural network may be so that you can train your model. Let’s prepare for a transfer by first initializing buckets in a few different cloud regions in AWS."
    ]
   },
   {
@@ -262,35 +213,14 @@
    "source": [
     "### Setting up AWS in the Destination region\n",
     "\n",
-    "First, let’s create a bucket in the destination region `aws:ap-south-1` to store the model weights. \n",
+    "First, let’s create a bucket in your source AWS region to store the data for the neural network.\n",
     "\n",
-    "> **💡 Hint** - Reminder to replace [name] with a unique string. e.g., \"edcvr\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bucket_name = \"gorilla-weights-[name]\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can create the bucket through Skyplane's API interface. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bucket_path = client.object_store().create_bucket(region=\"aws:ap-south-1\", bucket_name=bucket_name)\n",
-    "bucket_path"
+    "> **💡 Hint** - Reminder to replace [name] with a unique string. e.g., \"edcvr\"\n",
+    "\n",
+    "💻 `aws s3 mb s3://skycamp-diffusion-data-[name] --region eu-west-1`\n",
+    "```\n",
+    "make_bucket: skycamp-diffusion-data-[name]\n",
+    "```"
    ]
   },
   {
@@ -313,10 +243,16 @@
    "source": [
     "Each cloud provider has dedicated tools to move data between cloud regions. Let’s try transferring over the data using AWS’s built in cp command:\n",
     "\n",
-    "💻 `aws s3 cp --recursive s3://skycamp-demo-bucket/gorilla s3://{bucket_name}`\n",
+    "💻 `aws s3 cp --recursive s3://laion-400m s3://skycamp-diffusion-data-[name]`\n",
     "\n",
     "```\n",
-    "Completed 536.0 MiB/12.4 GiB (17.8 MiB/s) with 2 file(s) remaining\n",
+    "copy: s3://stable-diffusion-data/part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet to s3://skycamp-anton-diffusion-data/part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "copy: s3://stable-diffusion-data/part-00002-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet to s3://skycamp-anton-diffusion-data/part-00002-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "copy: s3://stable-diffusion-data/part-00005-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet to s3://skycamp-anton-diffusion-data/part-00005-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "copy: s3://stable-diffusion-data/part-00008-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet to s3://skycamp-anton-diffusion-data/part-00008-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "copy: s3://stable-diffusion-data/part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet to s3://skycamp-anton-diffusion-data/part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "Completed 4.2 GiB/~15.7 GiB (36.9 MiB/s) with ~12 file(s) remaining (calculating...)\n",
+    "\n",
     "```\n",
     "\n",
     "### This will take a long time to complete. Feel free to interrupt the command. Notice that it copies data at under 25 MiB/s.\n"
@@ -330,21 +266,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "src_bucket_path = \"s3://skycamp-demo-bucket/gorilla/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.copy(src_bucket_path, bucket_path, recursive=True, max_instances=4)"
+    "💻 `skyplane cp --recursive s3://laion-400m s3://skycamp-diffusion-data-[name]`\n",
+    "\n",
+    "```\n",
+    " _____ _   ____   _______ _       ___   _   _  _____\n",
+    "/  ___| | / /\\ \\ / / ___ \\ |     / _ \\ | \\ | ||  ___|\n",
+    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__\n",
+    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __|\n",
+    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___\n",
+    "\\____/\\_| \\_/  \\_/ \\_|   \\_____/\\_| |_/\\_| \\_/\\____/\n",
+    "\n",
+    "\n",
+    "Will transfer 32 objects totaling 35.90GB from aws:us-east-1 to aws:us-east-1\n",
+    "    VMs to provision: 1x aws:us-east-1\n",
+    "    part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "    part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "    ...\n",
+    "a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "    part-00030-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00030-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "\n",
+    "Continue? [Y/n]: Y\n",
+    "Transfer starting (Tip: Enable auto-confirmation with `skyplane config set autoconfirm true`)\n",
+    "\n",
+    "Storing debug information for transfer in /tmp/skyplane/transfer_logs/20221018_205648/client.log\n",
+    "✓ Initializing cloud keys (3/3) in 2.84s\n",
+    "✓ Provisioning gateway instances (1/1) in 34.48s\n",
+    "✓ Installing gateway package (1/1) in 12.41s\n",
+    "🚀 35.90GB transfer job launched\n",
+    "  Transfer progress (completing multi-part uploads) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 35.9/35.9 GiB 602.0 MB/s 0:00:00\n",
+    "✓ Deprovisioning instances (1/1) in 2.42s\n",
+    "⠙ Verifying all files were copied\n",
+    "\n",
+    "✅ Transfer completed successfully\n",
+    "Transfer runtime: 61.94s, Throughput: 4.64Gbps\n",
+    "\n",
+    "```\n"
    ]
   },
   {
@@ -375,73 +334,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a secondary region bucket\n",
-    "\n",
-    "Lets create a second bucket in the additional destination region `aws:eu-north-1`. \n",
-    "\n",
-    "> **💡 Hint** - Reminder to replace [name] with a unique string. e.g., \"edcvr\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "another_bucket_name = \"gorilla-[name]\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "another_bucket_path = client.object_store().create_bucket(region=\"aws:eu-north-1\", bucket_name=another_bucket_name)\n",
-    "another_bucket_path"
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running a multicast transfer \n",
-    "To run a multicast transfer, we can simply enter a list of destinations instead of a single destination. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.copy(src_bucket_path, [bucket_path, another_bucket_path], recursive=True, max_instances=4)"
+    "# Exercise 4: We will now try another Skyplane feature - syncing data between AWS regions\n",
+    "Now, let’s suppose that you have a bucket storing a backup of your dataset, and it already has some of the data there.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 4: Cleanup \n",
-    "Finally, lets use the Skyplane API to delete the buckets we created. "
+    "Let’s use Skyplane’s sync command to update the weights, and again compare the time that it takes. \n",
+    "\n",
+    "\n",
+    "💻 `skyplane sync s3://laion-400m s3://skycamp-diffusion-data-[name]`\n",
+    "\n",
+    "```\n",
+    " _____ _   ____   _______ _       ___   _   _  _____ \n",
+    "/  ___| | / /\\ \\ / / ___ \\ |     / _ \\ | \\ | ||  ___|\n",
+    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__  \n",
+    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __| \n",
+    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___ \n",
+    "\\____/\\_| \\_/  \\_/ \\_|   \\_____/\\_| |_/\\_| \\_/\\____/\n",
+    "\n",
+    "No objects need updating. Exiting...\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "client.object_store().delete_bucket(bucket_name, provider=\"aws\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.object_store().delete_bucket(another_bucket_name, provider=\"aws\")"
+    "---"
    ]
   },
   {
@@ -506,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
