Remove vm-to-vm notebook

--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -242,7 +242,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can copy this to the bucket we previously created with the Skyplane client: "
+    "We can copy this to the bucket we previously created with the Skyplane client:\n",
+    "\n",
+    "> **⚠️ Warning** - Be careful not to interrupt the running cell, since it may lead to leaked instances. "
    ]
   },
   {
@@ -251,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.copy(src_bucket_path, bucket_path, recursive=True, max_instances=2)"
+    "client.copy(src_bucket_path, bucket_path, recursive=True, max_instances=1)"
    ]
   },
   {
@@ -315,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.copy(src_bucket_path, [bucket_path, another_bucket_path], recursive=True, max_instances=2)"
+    "client.copy(src_bucket_path, [bucket_path, another_bucket_path], recursive=True, max_instances=1)"
    ]
   },
   {
