adding new changes from main

--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -314,57 +314,94 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 3: Let's scale up transfer bandwidth with Skyplane"
+    "# Exercise 3: Transferring to multiple destinations\n",
+    "<p style=\"text-align:center;\">\n",
+    "    <img src=\"./assets/multicast.jpg\" width=700>\n",
+    "</p>"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "💻 `skyplane cp -n 4 --recursive s3://laion-400m s3://skycamp-diffusion-data-[name]`\n",
-    "\n",
-    "```\n",
-    " _____ _   ____   _______ _       ___   _   _  _____ \n",
-    "/  ___| | / /\\ \\ / / ___ \\ |     / _ \\ | \\ | ||  ___|\n",
-    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__  \n",
-    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __| \n",
-    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___ \n",
-    "\\____/\\_| \\_/  \\_/ \\_|   \\_____/\\_| |_/\\_| \\_/\\____/\n",
-    "\n",
-    "\n",
-    "Will transfer 32 objects totaling 53.75GB from aws:us-east-1 to aws:eu-west-1\n",
-    "    VMs to provision: 4x aws:eu-west-1, 4x aws:us-east-1\n",
-    "    Estimated egress cost: $1.08 at $0.02/GB\n",
-    "    part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
-    "    part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
-    "    ...\n",
-    "    part-00031-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00031-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
-    "Continue? [Y/n]: Y\n",
-    "Transfer starting (Tip: Enable auto-confirmation with `skyplane config set autoconfirm true`)\n",
-    "\n",
-    "Storing debug information for transfer in /tmp/skyplane/transfer_logs/20221019_020117/client.log\n",
-    "✓ Initializing cloud keys (3/3) in 3.79s\n",
-    "✓ Provisioning gateway instances (8/8) in 43.82s\n",
-    "✓ Installing gateway package (8/8) in 28.26s\n",
-    "🚀 53.75GB transfer job launched\n",
-    "  Transfer progress (completing multi-part uploads) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 53.8/53.8 GiB 2.0 GB/s 0:00:00\n",
-    "Compression saved 0.20% of egress fees\n",
-    "✓ Deprovisioning instances (8/8) in 6.62s\n",
-    "⠸ Verifying all files were copied\n",
-    "\n",
-    "✅ Transfer completed successfully\n",
-    "Transfer runtime: 33.09s, Throughput: 12.99Gbps\n",
-    "```"
+    "In some cases, data needs to be replicated to multiple destinations. For example, say you have some freshly trained model weights: you'll want to have them accessible across multiple regions as quickly as possible. In this example, we'll show how you can run a multicast (i.e. multi-destination) transfer using Skyplane. "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  💡  Observe skyplane enables you to scale up transfer throughput by paralellizing data between multiple VMs"
+    "## Create a secondary region bucket"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets create buckets in the destination regions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucket_name = \"gorilla-weights-[name]\"\n",
+    "another_bucket_name = \"gorilla-[name]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucket_path = client.object_store().create_bucket(region=\"aws:ap-south-1\", bucket_name=bucket_name)\n",
+    "another_bucket_path = client.object_store().create_bucket(region=\"aws:eu-central-1\", bucket_name=another_bucket_name)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running a multicast transfer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To run a multicast transfer, we can simply enter a list of destinations instead of a single destination."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import skyplane \n",
+    "\n",
+    "client = skyplane.SkyplaneClient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.copy(src_bucket_path, [bucket_path, another_bucket_path], recursive=True, max_instances=1)"
    ]
   },
   {
@@ -375,42 +412,22 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 4: We will now try another Skyplane feature - syncing data between AWS regions\n",
-    "Now, let’s suppose that you have a bucket storing a backup of your dataset, and it already has some of the data there.\n"
+    "# Exercise 4: Cleanup\n",
+    "Finally, lets use the Skyplane API to delete the buckets we created.\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Let’s use Skyplane’s sync command to update the weights, and again compare the time that it takes. \n",
-    "\n",
-    "\n",
-    "💻 `skyplane sync s3://laion-400m s3://skycamp-diffusion-data-[name]`\n",
-    "\n",
-    "```\n",
-    " _____ _   ____   _______ _       ___   _   _  _____ \n",
-    "/  ___| | / /\\ \\ / / ___ \\ |     / _ \\ | \\ | ||  ___|\n",
-    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__  \n",
-    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __| \n",
-    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___ \n",
-    "\\____/\\_| \\_/  \\_/ \\_|   \\_____/\\_| |_/\\_| \\_/\\____/\n",
-    "\n",
-    "No objects need updating. Exiting...\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "<p style=\"text-align:center;\">\n",
-    "    <img src=\"./assets/multicast.jpg\" width=700>\n",
-    "</p>"
+    "client.object_store().delete_bucket(bucket_name, provider=\"aws\")\n",
+    "client.object_store().delete_bucket(another_bucket_name, provider=\"aws\")"
    ]
   },
   {
