--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -53,8 +53,8 @@
     "\n",
     "1. Exercise 1: Copying data between AWS regions\n",
     "2. Exercise 2: Let's try the same transfer with Skyplane\n",
-    "3. Exercise 3: Let's scale up transfer bandwidth with Skyplane\n",
-    "4. Exercise 4: We will now try another Skyplane feature - syncing data between AWS regions\n",
+    "3. Exercise 3: Copying data to multiple destinations (multicast)\n",
+    "4. Exercise 4: Cleanup\n",
     "\n",
     "# Learning outcomes 🎯\n",
     "\n",
@@ -337,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a secondary region bucket"
+    "## Create destination buckets"
    ]
   },
   {
