--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -82,6 +82,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's ensure we have the latest notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Please run this cell\n",
+    "!git pull --quiet"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,6 +135,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configure Skyplane with AWS credentials.\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,43 +158,6 @@
    "metadata": {},
    "source": [
     "The core of Skyplane is based around the `cp` command. Suppose you want to transfer a fine-tuned [Gorilla](https://github.com/ShishirPatil/gorilla) model from one region to another to be accessible to a cross-regional serving cluster. Skyplane can help you efficiently transfer this data so you model weights are accessible accross multiple regions.  Let’s prepare for a transfer by first initializing buckets in a few different cloud regions in AWS."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise 1: Setting up Authentication & Buckets "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Authentication"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AWS_ACCESS_KEY = \"\" #TODO \n",
-    "AWS_SECRET_KEY = \"\" #TODO "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import skyplane \n",
-    "\n",
-    "client = skyplane.SkyplaneClient(\n",
-    "    aws_config=skyplane.AWSConfig(aws_access_key=AWS_ACCESS_KEY, aws_secret_key=AWS_SECRET_KEY)\n",
-    ")"
    ]
   },
   {
@@ -213,6 +202,14 @@
    "source": [
     "bucket_path = client.object_store().create_bucket(region=\"aws:ap-south-1\", bucket_name=bucket_name)\n",
     "bucket_path"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 1: Copying data between AWS regions"
    ]
   },
   {
@@ -304,11 +301,23 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running a multicast transfer \n",
+    "## Running a multicast transfer using Skyplane API\n",
     "To run a multicast transfer, we can simply enter a list of destinations instead of a single destination. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import skyplane \n",
+    "\n",
+    "client = skyplane.SkyplaneClient()"
    ]
   },
   {
