--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -82,7 +82,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,7 +134,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -175,37 +173,16 @@
     "\n",
     "First, let’s create a bucket in the destination region `aws:ap-south-1` to store the model weights. \n",
     "\n",
-    "> **💡 Hint** - Reminder to replace [name] with a unique string. e.g., \"edcvr\""
+    "> **💡 Hint** - Reminder to replace [name] with a unique string. e.g., \"edcvr\"\n",
+    "\n",
+    "\n",
+    "💻 `aws s3 mb s3://gorilla-weights-[name] --region ap-south-1`\n",
+    "```\n",
+    "make_bucket: gorilla-weights-[name]\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bucket_name = \"gorilla-weights-[name]\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can create the bucket through Skyplane's API interface. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bucket_path = client.object_store().create_bucket(region=\"aws:ap-south-1\", bucket_name=bucket_name)\n",
-    "bucket_path"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,41 +193,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 2: Transferring data with Skyplane"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We've setup the following source bucket that contains model weights: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "src_bucket_path = \"s3://skycamp-demo-bucket/gorilla/\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can copy this to the bucket we previously created with the Skyplane client:\n",
+    "Each cloud provider has dedicated tools to move data between cloud regions. Let’s try transferring over the data using AWS’s built in cp command:\n",
     "\n",
-    "> **⚠️ Warning** - Be careful not to interrupt the running cell, since it may lead to leaked instances. "
+    "💻 `aws s3 cp --recursive s3://skycamp-demo-bucket/gorilla/ s3://gorilla-weights-[name]`\n",
+    "\n",
+    "\n",
+    "\n",
+    "### This will take a long time to complete. Feel free to interrupt the command. Notice that it copies data at under 25 MiB/s."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "client.copy(src_bucket_path, bucket_path, recursive=True, max_instances=1)"
+    "# Exercise 2: Let's try the same transfer with skyplane "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "💻 `skyplane cp --recursive s3://skycamp-demo-bucket/gorilla/ s3://gorilla-weights-[name]`\n",
+    "\n",
+    "```\n",
+    " _____ _   ____   _______ _       ___   _   _  _____\n",
+    "/  ___| | / /\\ \\ / / ___ \\ |     / _ \\ | \\ | ||  ___|\n",
+    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__\n",
+    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __|\n",
+    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___\n",
+    "\\____/\\_| \\_/  \\_/ \\_|   \\_____/\\_| |_/\\_| \\_/\\____/\n",
+    "\n",
+    "\n",
+    "Will transfer 32 objects totaling 35.90GB from aws:us-east-1 to aws:us-east-1\n",
+    "    VMs to provision: 1x aws:us-east-1\n",
+    "    part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "    part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "    ...\n",
+    "a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "    part-00030-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00030-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
+    "\n",
+    "Continue? [Y/n]: Y\n",
+    "Transfer starting (Tip: Enable auto-confirmation with `skyplane config set autoconfirm true`)\n",
+    "\n",
+    "Storing debug information for transfer in /tmp/skyplane/transfer_logs/20221018_205648/client.log\n",
+    "✓ Initializing cloud keys (3/3) in 2.84s\n",
+    "✓ Provisioning gateway instances (1/1) in 34.48s\n",
+    "✓ Installing gateway package (1/1) in 12.41s\n",
+    "🚀 35.90GB transfer job launched\n",
+    "  Transfer progress (completing multi-part uploads) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 35.9/35.9 GiB 602.0 MB/s 0:00:00\n",
+    "✓ Deprovisioning instances (1/1) in 2.42s\n",
+    "⠙ Verifying all files were copied\n",
+    "\n",
+    "✅ Transfer completed successfully\n",
+    "Transfer runtime: 61.94s, Throughput: 4.64Gbps\n",
+    "\n",
+    "```\n"
    ]
   },
   {
@@ -278,30 +275,15 @@
     "\n",
     "Lets create a second bucket in the additional destination region `aws:eu-north-1`. \n",
     "\n",
-    "> **💡 Hint** - Reminder to replace [name] with a unique string. e.g., \"edcvr\""
+    "> **💡 Hint** - Reminder to replace [name] with a unique string. e.g., \"edcvr\"\n",
+    "\n",
+    "💻 `aws s3 mb s3://gorilla-[name] --region eu-north-1`\n",
+    "```\n",
+    "make_bucket: gorilla-[name]\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "another_bucket_name = \"gorilla-[name]\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "another_bucket_path = client.object_store().create_bucket(region=\"aws:eu-central-1\", bucket_name=another_bucket_name)\n",
-    "another_bucket_path"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -318,6 +300,17 @@
     "import skyplane \n",
     "\n",
     "client = skyplane.SkyplaneClient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src_bucket_path = \"s3://skycamp-demo-bucket/gorilla/\"\n",
+    "bucket_path = \"s3://gorilla-weights-[name]\"\n",
+    "another_bucket_path = \"s3://gorilla-[name]\""
    ]
   },
   {
